[gd_scene load_steps=19 format=3 uid="uid://ce3whhexodeq"]

[ext_resource type="Script" uid="uid://kfd0ikbl6ccv" path="res://scripts/steam_init.gd" id="1_l7yh2"]
[ext_resource type="PackedScene" uid="uid://bhdd2yibs0k5p" path="res://scenes/player_info_list.tscn" id="2_qbdcp"]
[ext_resource type="Resource" uid="uid://bbh454capi25j" path="res://resources/p1.tres" id="3_6r74s"]
[ext_resource type="PackedScene" uid="uid://87ypdb6oj28m" path="res://scenes/game.tscn" id="4_qvjsr"]
[ext_resource type="PackedScene" uid="uid://dk0tygl1c8st1" path="res://scenes/avatar_select.tscn" id="5_c3dpn"]
[ext_resource type="Shader" uid="uid://bhm61sfqsg2hv" path="res://shaders/outline.gdshader" id="6_joid1"]
[ext_resource type="Resource" uid="uid://b38nfipjcd0iq" path="res://resources/p2.tres" id="7_mnfq4"]
[ext_resource type="Resource" uid="uid://cjqxifaurvhax" path="res://resources/p3.tres" id="8_v2ogy"]
[ext_resource type="Resource" uid="uid://xqddodemmwyq" path="res://resources/p4.tres" id="9_eigfk"]
[ext_resource type="Resource" uid="uid://byqu4nmt5qh48" path="res://resources/p5.tres" id="10_mttnt"]
[ext_resource type="Resource" uid="uid://c7cqxx4bebfeo" path="res://resources/p6.tres" id="11_id5pu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_akolw"]
resource_local_to_scene = true
shader = ExtResource("6_joid1")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_16idy"]
resource_local_to_scene = true
shader = ExtResource("6_joid1")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dcek"]
resource_local_to_scene = true
shader = ExtResource("6_joid1")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qpu51"]
resource_local_to_scene = true
shader = ExtResource("6_joid1")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2sffw"]
resource_local_to_scene = true
shader = ExtResource("6_joid1")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yqhex"]
resource_local_to_scene = true
shader = ExtResource("6_joid1")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jujhb"]
bg_color = Color(0.401942, 0.68324, 0.319943, 1)

[node name="SteamInit" type="Node2D"]
script = ExtResource("1_l7yh2")
player_info_list = ExtResource("2_qbdcp")
std_avatar = ExtResource("3_6r74s")
game_scene = ExtResource("4_qvjsr")

[node name="MainContainer" type="VBoxContainer" parent="."]
offset_left = 9.0
offset_top = 26.0
offset_right = 1141.0
offset_bottom = 635.0

[node name="FormContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="MainContainer/FormContainer"]
layout_mode = 2
text = "Steam Lobby"
horizontal_alignment = 1

[node name="PlayerNameContainer" type="HBoxContainer" parent="MainContainer/FormContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="MainContainer/FormContainer/PlayerNameContainer"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerNameInput" type="LineEdit" parent="MainContainer/FormContainer/PlayerNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your name"

[node name="AvatarContainer" type="HBoxContainer" parent="MainContainer/FormContainer"]
layout_mode = 2

[node name="AvatarLabel" type="Label" parent="MainContainer/FormContainer/AvatarContainer"]
layout_mode = 2
text = "Avatar:"

[node name="Avatar1" parent="MainContainer/FormContainer/AvatarContainer" instance=ExtResource("5_c3dpn")]
material = SubResource("ShaderMaterial_akolw")
layout_mode = 2
avatar = ExtResource("3_6r74s")

[node name="Avatar2" parent="MainContainer/FormContainer/AvatarContainer" instance=ExtResource("5_c3dpn")]
material = SubResource("ShaderMaterial_16idy")
layout_mode = 2
avatar = ExtResource("7_mnfq4")

[node name="Avatar3" parent="MainContainer/FormContainer/AvatarContainer" instance=ExtResource("5_c3dpn")]
material = SubResource("ShaderMaterial_3dcek")
layout_mode = 2
avatar = ExtResource("8_v2ogy")

[node name="Avatar4" parent="MainContainer/FormContainer/AvatarContainer" instance=ExtResource("5_c3dpn")]
material = SubResource("ShaderMaterial_qpu51")
layout_mode = 2
avatar = ExtResource("9_eigfk")

[node name="Avatar5" parent="MainContainer/FormContainer/AvatarContainer" instance=ExtResource("5_c3dpn")]
material = SubResource("ShaderMaterial_2sffw")
layout_mode = 2
avatar = ExtResource("10_mttnt")

[node name="Avatar6" parent="MainContainer/FormContainer/AvatarContainer" instance=ExtResource("5_c3dpn")]
material = SubResource("ShaderMaterial_yqhex")
layout_mode = 2
avatar = ExtResource("11_id5pu")

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/FormContainer"]
layout_mode = 2

[node name="LobbyLabel" type="Label" parent="MainContainer/FormContainer/HBoxContainer2"]
layout_mode = 2
text = "Lobby ID:"

[node name="LobbyInput" type="LineEdit" parent="MainContainer/FormContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Server lobby ID"

[node name="ButtonsContainer" type="HBoxContainer" parent="MainContainer/FormContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="ServerButton" type="Button" parent="MainContainer/FormContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_jujhb")
text = "Start Server"

[node name="ClientButton" type="Button" parent="MainContainer/FormContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect to Server"

[node name="StartGameButton" type="Button" parent="MainContainer/FormContainer"]
visible = false
layout_mode = 2
text = "Start Game"

[node name="ButtonsContainer2" type="HBoxContainer" parent="MainContainer/FormContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="OverlayButton" type="Button" parent="MainContainer/FormContainer/ButtonsContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_jujhb")
text = "Steam Overlay"

[node name="InviteButton" type="Button" parent="MainContainer/FormContainer/ButtonsContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Invite Friend"

[node name="StatusLabel" type="Label" parent="MainContainer/FormContainer"]
layout_mode = 2
text = "Status: Ready"

[node name="PlayerList" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersLabel" type="Label" parent="MainContainer/PlayerList"]
layout_mode = 2
text = "Connected Players:"

[node name="ExitButton" type="Button" parent="."]
offset_left = 1098.0
offset_top = 12.0
offset_right = 1140.0
offset_bottom = 43.0
text = "Exit"

[connection signal="pressed" from="MainContainer/FormContainer/ButtonsContainer/ServerButton" to="." method="_on_server_pressed"]
[connection signal="pressed" from="MainContainer/FormContainer/ButtonsContainer/ClientButton" to="." method="_on_client_pressed"]
[connection signal="pressed" from="MainContainer/FormContainer/StartGameButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainContainer/FormContainer/ButtonsContainer2/OverlayButton" to="." method="_on_overlay_button_pressed"]
[connection signal="pressed" from="MainContainer/FormContainer/ButtonsContainer2/InviteButton" to="." method="_on_invite_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_pressed"]
